--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Big Picture by HTML5 UP</title>
+		<title>Viktor Kraus</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,7 +16,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1>Big Picture</h1>
+				<h1>Viktor Kraus</h1>
 				<nav>
 					<ul>
 						<li><a href="#intro">Intro</a></li>
@@ -32,10 +32,9 @@
 			<section id="intro" class="main style1 dark fullscreen">
 				<div class="content">
 					<header>
-						<h2>Hey.</h2>
+						<h2>Viktor Kraus</h2>
 					</header>
-					<p>Welcome to <strong>Big Picture</strong> a responsive site template designed by <a href="https://html5up.net">HTML5 UP</a><br />
-					and released for free under the <a href="https://html5up.net/license">Creative Commons Attribution license</a>.</p>
+					<p>Welcome to my <strong>Portfolio</strong>! This is a page full of my previous projects in all things <strong>Music, Audio</strong> and <strong>Sound Effects</strong> </p>
 					<footer>
 						<a href="#one" class="button style2 down">More</a>
 					</footer>
@@ -48,9 +47,10 @@
 					<header>
 						<h2>What I Do</h2>
 					</header>
-					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+					<p>I create immersive audio experiences for video games. From atmospheric soundscapes to dynamic sound effects, 
+					I design audio that enhances storytelling and engages players deeply. 
+					My work covers a range of genres, ensuring each project’s unique world has its own voice, whether through haunting melodies, adrenaline-pumping tracks, or subtle ambient sounds. 
+					I’m passionate about blending sound and music to shape unforgettable game moments.</p>
 				</div>
 				<a href="#two" class="button style2 down anchored">Next</a>
 			</section>
@@ -61,9 +61,9 @@
 					<header>
 						<h2>Who I Am</h2>
 					</header>
-					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+					<p>I’m Viktor Kraus, a dedicated video game composer and sound designer. My journey in game audio started from a love for storytelling and interactive worlds, 
+					and I’ve since worked with developers to bring their games to life sonically. I believe sound is the unseen dimension of games, one that can evoke emotions and create memories. 
+					Outside of audio work, I enjoy exploring new music styles and discovering unique sounds that inspire my creative process.</p>
 				</div>
 				<a href="#work" class="button style2 down anchored">Next</a>
 			</section>
@@ -73,9 +73,8 @@
 				<div class="content">
 					<header>
 						<h2>My Work</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-						Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis
-						arcu, id varius justo euismod in. Curabitur egestas consectetur magna vitae.</p>
+						<p>Here’s a selection of my music and sound design projects for games. 
+						Each piece is crafted to enhance the experience and bring the game’s world to life.</p>
 					</header>
 
 					<!-- Gallery  -->
@@ -108,7 +107,8 @@
 				<div class="content">
 					<header>
 						<h2>Say Hello.</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.</p>
+						<p>Do you want to work with me? Have an interesting game idea that needs my sound? This is where you can contact me! I'm also available under X (former Twitter) and Instagram. 
+						<strong>This is currently under construction. </strong> </p>
 					</header>
 					<div class="box">
 						<form method="post" action="#">
@@ -130,12 +130,9 @@
 
 				<!-- Icons -->
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li>
+						<li><a href="https://twitter.com/viktorkraus2" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.instagram.com/viktorrkraus/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+					
 					</ul>
 
 				<!-- Menu -->
