--- a/index.html
+++ b/index.html
@@ -81,7 +81,12 @@
 						<div class="gallery">
 							<article class="from-left">
 								<a href="images/fulls/01.jpg" class="image fit"><img src="images/thumbs/01.jpg" title="The Anonymous Red" alt="" /></a>
+								<audio controls>
+                    						<source src="audio/track1.mp3" type="audio/mpeg">
+                    						Your browser does not support the audio element.
+                						</audio>
 							</article>
+							
 							<article class="from-right">
 								<a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" title="Airchitecture II" alt="" /></a>
 							</article>
