--- a/index.html
+++ b/index.html
@@ -47,10 +47,8 @@
 					<header>
 						<h2>What I Do</h2>
 					</header>
-					<p>I create immersive audio experiences for video games. From atmospheric soundscapes to dynamic sound effects, 
-					I design audio that enhances storytelling and engages players deeply. 
-					My work covers a range of genres, ensuring each project’s unique world has its own voice, whether through haunting melodies, adrenaline-pumping tracks, or subtle ambient sounds. 
-					I’m passionate about blending sound and music to shape unforgettable game moments.</p>
+					<p>Viktor Kraus is a composer, producer and musician based in Germany, specializing in video game soundtracks. His passion for music and games shines through every track  he creates. Viktor manages to combine infecting rhythms, strong emotional melodies and interresting arrangments into memorable tunes that will elevate your game!
+</p>
 				</div>
 				<a href="#two" class="button style2 down anchored">Next</a>
 			</section>
